@@ -40,9 +40,9 @@ width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
 <h1 align="center"><a name="top">mpiP: Lightweight, Scalable MPI
 Profiling</a></h1>
 
-<p align="center">Version 3.2<br>
+<p align="center">Version 3.2.1<br>
 
-12 March 2010 <br>
+01 April 2010 <br>
 
 <br>
 
@@ -181,6 +181,14 @@ order):</p>
 </ul>
 
 <h3><a name="New_Features">New Features with Release 3.2</a></h3>
+
+<p>Release v3.2.1 addresses the following issue:
+</p>
+
+<ul>
+
+  <li>Improved support for SLURM run-time instrumentation.</li>
+</ul>
 
 <p>Release v3.2 addresses the following issues:
 </p>
@@ -2276,7 +2284,7 @@ advertising or product endorsement purposes.<br>
 <hr>
 <p>For further information please send mail to <a href="mailto:mpip-help@lists.sourceforge.net">mpip-help@lists.sourceforge.net</a>.</p>
 
-<p class="pageinfo"> Last modified on March 12th, 2010.<br>
+<p class="pageinfo"> Last modified on April 1st, 2010.<br>
 
 UCRL-CODE-223450</p>
 
